Refs #17720: fix bug: text on Objective details modal window not fully visible

--- a/src/nbsap/static/css/style.css
+++ b/src/nbsap/static/css/style.css
@@ -1112,7 +1112,7 @@ h1.small {
 }
 
 .modal-body {
-  padding-bottom: 10px;
+  padding-bottom: 45px;
 }
 
 .big-modal .modal-inside-body {
